--- a/my-app/src/Components/Expenses.module.css
+++ b/my-app/src/Components/Expenses.module.css
@@ -27,3 +27,35 @@ h1 {
   font-size: medium;
   margin-bottom: 5px;
 }
+
+.submitForm {
+  align-items: center;
+  display: flex;
+  /* border: 2px solid red; */
+  padding: 10px;
+}
+
+.button {
+  margin: 0;
+  margin-top: 10px;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  border-radius: 15px;
+  font-size: large;
+  border: none;
+  background-color: #e9f1de;
+  text-decoration: none;
+  cursor: pointer;
+  color: black;
+}
+
+.input {
+  border-radius: 6px;
+  text-decoration: none; /* Remove underline */
+  margin-right: 10px;
+}
+
+.headingUnderline {
+  text-decoration: underline;
+}
