--- a/my-app/src/Components/Expenses.module.css
+++ b/my-app/src/Components/Expenses.module.css
@@ -59,3 +59,9 @@ h1 {
 .headingUnderline {
   text-decoration: underline;
 }
+
+.expenseList {
+  /* border: 2px solid red; */
+  width: 350px;
+  margin: 0 auto;
+}
